(Details of any changes will be given in the "Answer changes" section below.)


[ ] clm5_1

[ ] clm5_0

[ ] ctsm5_0-nwp

[ ] clm4_5

Bugs fixed or introduced
------------------------

CTSM issues fixed (include CTSM Issue #): #1722

Notes of particular relevance for developers:
---------------------------------------------

Changes to tests or testing: Added a test for lai_streams with FATES

Testing summary:
----------------
  regular tests (aux_clm: https://github.com/ESCOMP/CTSM/wiki/System-Testing-Guide#pre-merge-system-testing):

    cheyenne ---- OK
    izumi ------- OK

  fates tests: (give name of baseline if different from CTSM tagname, normally fates baselines are fates-<FATES TAG>-<CTSM TAG>)
    cheyenne ---- OK
    izumi ------- OK


Answer changes
--------------

Changes answers relative to baseline: None

Other details
-------------

List any externals directories updated (cime, rtm, mosart, cism, fates, etc.): fates

Pull Requests that document the changes (include PR ids): #2054
(https://github.com/ESCOMP/ctsm/pull)

===============================================================
===============================================================
Tag name: ctsm5.1.dev139
Originator(s): slevis (Samuel Levis)
Date: Fri Aug 25 16:47:45 MDT 2023
One-line Summary: Fix problems uncovered by nag -nan tests

Purpose and description of changes
----------------------------------

 Fix problems uncovered by adding the -nan compilation flag for the Nag
 compiler.


Significant changes to scientifically-supported configurations
--------------------------------------------------------------

Does this tag change answers significantly for any of the following physics configurations?
(Details of any changes will be given in the "Answer changes" section below.)

    [Put an [X] in the box for any configuration with significant answer changes.]

[ ] clm5_1

[ ] clm5_0

[ ] ctsm5_0-nwp

[ ] clm4_5


Bugs fixed or introduced
------------------------