@@ -1226,6 +1226,26 @@ my %failtest = (
                                      GLC_TWO_WAY_COUPLING=>"FALSE",
                                      phys=>"clm5_0",
                                    },
+     "fates_non_sp_laistreams"   =>{ options=>"--envxml_dir . --bgc fates",
+                                     namelist=>"use_lai_streams=.true., use_fates_sp=.false.",
+                                     GLC_TWO_WAY_COUPLING=>"FALSE",
+                                     phys=>"clm5_0",
+                                     },
+     "bgc_non_sp_laistreams"     =>{ options=>"--envxml_dir . --bgc bgc",
+                                     namelist=>"use_lai_streams=.true.",
+                                     GLC_TWO_WAY_COUPLING=>"FALSE",
+                                     phys=>"clm5_0",
+                                     },
+     "bgc_laistreams_input"     =>{ options=>"--envxml_dir . --bgc bgc",
+                                     namelist=>"use_lai_streams=.false., stream_year_first_lai=1999",
+                                     GLC_TWO_WAY_COUPLING=>"FALSE",
+                                     phys=>"clm5_0",
+                                     },
+     "crop_laistreams_input"     =>{ options=>"--envxml_dir . --bgc sp --crop",
+                                     namelist=>"use_lai_streams=.true.",
+                                     GLC_TWO_WAY_COUPLING=>"FALSE",
+                                     phys=>"clm5_0",
+                                     },
                );
 foreach my $key ( keys(%failtest) ) {
    print( "$key\n" );
